--- a/src/components/dropdown/Dropdown.css
+++ b/src/components/dropdown/Dropdown.css
@@ -1,3 +1,26 @@
-.dropdown-structures{
-    background-color: aqua;
-}
+.div-select{
+    box-shadow: 0 0 0 2px white, 0 0 0 4px var(--dark-green);
+    padding: 1rem 0 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--dark-green);
+    font-size: 1rem;
+    max-block-size: 30%;
+    margin: 1rem;
+  }
+
+  .div-select label{
+    width:40vw;
+    min-width: 15vw;
+    text-align: center;
+    margin-bottom: 1rem;
+    letter-spacing: 2px;
+    color:white;
+  }
+
+  #select{
+    font-size: 1rem;
+    margin:0.5rem;
+    max-width: fit-content;
+  }
